<resources>
    <string name="app_name">Tukio</string>
    <string name="app_name_beta">Tukio Beta</string>
    <string name="discard_changes_message">Do you want to discard your changes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conferences">Conferences</string>
    <string name="gala">Gala</string>
    <string name="movement">Movement</string>
    <string name="party">Party</string>
    <string name="sports">Sports</string>
    <string name="full_details">Full Details</string>
    <string name="title_activity_bottom_activity">bottom_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_tags_manadatory">Select the tags specific to your event</string>
    <string name="click_the_buttons_below_to_add_special_guests_optional">Click the buttons below to add special guests
        (optional)
    </string>
    <string name="link_to_buy_tickets_optional">Link to buy tickets</string>
    <string name="registration_link_optional">Registration link(optional)</string>
    <string name="dress_code">Dress code(optional)</string>
    <string name="add_event_date">Event date</string>
    <string name="event_location">Event location</string>
    <string name="add_the_event_image_poster">Add the event image/poster</string>
    <string name="event_description">Event description..</string>
    <string name="event_title">Event title..</string>
    <string name="title_activity_maps">Event Location</string>
    <string name="view_more">...</string>
    <string name="see_directions">Directions</string>
    <string name="event_s_image">Event\'s Image</string>
    <string name="check_more_options">Check more options</string>
    <string name="check_event_s_updates">Check event\'s updates</string>
    <string name="fine_tuning_your_interests">Fine-tuning your interests..</string>
    <string name="oops_your_feed_is_empty_check_your_internet_connection_or_try_switching_up_your_interests">Oops, your
        feed is empty! Check your internet connection or try switching up your interests
    </string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="now_time_range">now</string>
    <string name="no_updates_at_the_moment_check_back_later">No Updates at the moment. Check back later</string>
    <string name="guests_invitees">Guests Invitees</string>
    <string name="registration_link">Registration Link</string>
    <string name="ticket_link">Ticket Link</string>
    <string name="description">Description</string>
    <string name="this_shouldn_t_be_happening_check_your_internet_connection_and_try_again">This shouldn\'t be
        happening. Check your internet connection and try again
    </string>
    <string name="type_in_comment_here">Type in comment here..</string>
    <string name="promoted">Promoted</string>
    <string name="mandatory_details">Mandatory Details</string>
    <string name="optional_details">Optional Details</string>
    <string name="modify_interests">Modify Interests</string>
    <string name="view_posted_events">View posted events..</string>
    <string name="view_promoted_events">View promoted events..</string>
    <string name="edit_username_and_bio">Edit Username and Bio</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="go_back">Go Back</string>
    <string name="channel_name">Tukio Events</string>
    <string name="channel_desc">Bringing your events happening around you instantaneously</string>
    <string name="title_activity_maps2">Map</string>
    <string name="select_the_tags_you_are_most_interested_in_this_tags_will_influence_your_events_feed_only_5_tags_can_be_added">
        This tags will influence your events feed! Only 5 tags can be added!
    </string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account, Sign Up</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="not_board_label">\" Oh! I ddn\'t know about it in time, Now I can\'t make it :( \"</string>
    <string name="pers_board_label">\" I never know what is going on in this area. I\'m in no way current \"</string>
    <string name="update_board_label">\" How do I get my event to the largest possible audience!? \"</string>
    <string name="notifications_feature">No more. \n \n \n Tukio provides notification for all posted events as well as
        the ability to share said events
        at the click of a button!
    </string>
    <string name="pers_feature">Avoid stories that touch. \n \n \n Tukio is offering you a personalised feed of events
        and the
        full info that comes with them. You\'ll never miss an event again!
    </string>
    <string name="updates_feature">Don\'t Worry!. \n \n \n Bring your event to an even larger audience by promoting your
        events in-app!. For the
        right price, your events can reach everyone in your area
    </string>
    <string name="sorry_there_are_no_updates_to_events_that_you_re_going_to_at_the_moment_you_can_try_reloading">Sorry,
        You should see updates from events that you\'ve pinned here. Try reloading…
    </string>
    <string name="promoted_instro">After filling your event details, you will select your audience range each having its
        own price tag. \n \n \nThen you\'ll fill in your card details and the selected price tag will be deducted from
        your bank acount then your event will be sent!
    </string>
    <string name="bringing_all_events_happening_in_your_area_to_your_screen_in_a_matter_of_seconds_anyways_if_you_feel_there_s_something_that_is_missing_or_something_that_is_not_quite_right_feel_free_to_contact_us_below">
        Bringing all events happening in your area to your screen in a matter of seconds! \n \n \nAnyways, if you feel
        there\'s
        something that is missing or something that is not quite right, feel free to contact us below!
    </string>
    <string name="updates">Updates</string>
    <string name="additional_information">Additional Information</string>
    <string name="additional_information_that_is_helpful_to_the_attendees_or_you_can_just_post_what_you_have_already">
        Additional information that is helpful to the attendees or you can just post what you have already
    </string>
    <string name="dress_code_optional">Dress Code (optional)</string>
    <string name="ticket_link_optional">Ticket Link (optional)</string>
    <string name="special_guests_optional">Special Guests (optional)</string>
    <string name="add_a_special_guest">Add a special guest</string>
    <string name="promote">Promote</string>
    <string name="share_event">Share Event!</string>
    <string name="share_your_event">Share Your Event!</string>
    <string name="these_are_the_important_aspects_of_your_event">These are the important aspects of your event!</string>
    <string name="select_tag">Select Tag</string>
    <string name="add_event_poster">Add Event Poster</string>
    <string name="you_re_almost_done">You\'re Almost Done!</string>
    <string name="event_comments">Event Comments</string>
    <string name="no_comments_yet_you_can_add_yours_below">No comments yet, you can add yours below</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio_optional">Bio (optional)</string>
    <string name="save_details">Save Details</string>
    <string name="view_image">View Image</string>
    <string name="primary_details">Primary Details</string>
    <string name="supplementary_details">Supplementary Details</string>
    <string name="no_dress_code">No Dress Code</string>
    <string name="no_registration_link">No Registration Link</string>
    <string name="no_ticket_link">No Ticket Link</string>
    <string name="special_guests">Special Guests</string>
    <string name="no_special_guests_for_this_event">No special guests for this event..</string>
    <string name="event_poster">Event Poster</string>
    <string name="get_started">Get Started!</string>
    <string name="ooh_you_haven_t_pinned_any_events_yet">Ooh, You haven\'t pinned any events yet!</string>
    <string name="oh_you_haven_t_posted_any_events_yet">Oh, you haven\'t posted any events yet!</string>
    <string name="promote_your_event">Promote your event</string>
    <string name="let_s_get_your_events_to_everyone_and_make_it_trend">Let\'s get your events to everyone and make it
        trend!
    </string>
    <string name="account_number">Account Number</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="cvc">CVC</string>
    <string name="select_promoting_plan">Select Promoting Plan</string>
    <string name="promote_event">Promote Event</string>
    <string name="get_your_event_trending_in_your_area_with_just_a_few_steps_with_your_promoted_event_reach_dependent_in_your_chosen_plan">
        Get your event trending in your area with just a few steps with your promoted event reach dependent in your
        chosen plan..
    </string>
    <string name="done">DONE</string>
    <string name="ooh_you_haven_t_promoted_any_events_yet">Ooh, You haven\'t promoted any events yet!</string>
    <string name="search_event_title">Search event title..</string>
    <string name="type_in_your_keyword_and_get_searching">Type in your keyword and get searching!</string>
    <string name="searching">Searching..</string>
    <string name="sorry_no_matches_for_your_entry_for_now">Sorry, no matches for your entry.. for now</string>
    <string name="select_interests">Select Interests</string>
    <string name="save_interests">Save Interests</string>
    <string name="event_updates">Event Updates</string>
    <string name="add_special_guest">Add Special Guest</string>
    <string name="the_guest_s_name_and_a_bio_that_describes_them_explicitly">The guest\'s name and a bio that describes
        them explicitly
    </string>
    <string name="guest_s_name">Guest\'s Name</string>
    <string name="guest_s_description">Guest\'s Description</string>
    <string name="add_guest">Add Guest</string>
    <string name="add_tag">Add Tag</string>
    <string name="select_one_tag_that_perfectly_describes_your_event">Select one tag that perfectly describes your
        event
    </string>
    <string name="add_event_update">Add Event Update</string>
    <string name="the_update_title_and_the_description_of_the_update">The update title and the description of the
        update
    </string>
    <string name="update_title">Update Title</string>
    <string name="posted_events">Posted Events</string>
    <string name="promoted_events">Promoted Events</string>
    <string name="_0">0</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create An Account,</string>
    <string name="let_s_get_you_started">Let\'s get you started!</string>
    <string name="short_bio_optional">Short Bio (optional)</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_part_of_us_sign_in">Already a part of us? Sign In!</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email_add">Your Email Address</string>
    <string name="forgot_password_text">Let\'s get you sorted</string>
    <string name="submit">Get Password</string>
    <string name="go_back_sign_in">Go back to sign in</string>
    <string name="retrieval_complete">Steps to retrieve your password have been sent to your email!</string>
</resources>