<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context=".View.Fragments.AuthFragments.PasswordRecoveryFragment">

	<LinearLayout android:layout_width="match_parent"
				  android:orientation="vertical"
				  android:animateLayoutChanges="true"
				  android:layout_height="wrap_content">

		<TextView
					android:text="@string/forgot_password"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView"
					android:textStyle="bold"
					android:textColor="@android:color/black"
					android:layout_marginStart="10dp"
					android:textSize="24sp"
					android:layout_marginTop="40dp"/>

		<TextView
				android:text="@string/forgot_password_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/forgot_password_text"
				android:textColor="@android:color/black"
				android:textSize="17sp"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="16dp"/>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/forgot_password_editText_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hintAnimationEnabled="true"
					android:hint="@string/email_add"
					android:backgroundTint="@color/colorAccent"
					android:textColorHint="@android:color/black"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
					android:layout_marginTop="32dp"
					android:layout_marginEnd="10dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginStart="10dp">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textEmailAddress"
						android:ems="10"
						android:fontFamily="@font/font_family"
						android:textColor="@android:color/black"
						android:textSize="15sp"
						android:id="@+id/forgot_password_editText"/>
			</com.google.android.material.textfield.TextInputLayout>

			<TextView android:layout_width="wrap_content"
					  android:layout_marginTop="40dp"
					  android:layout_marginStart="15dp"
					  android:layout_marginEnd="15dp"
					  android:textColor="@color/colorAccent"
					  android:layout_gravity="center_horizontal"
					  android:visibility="gone"
					  android:id="@+id/retrieval_complete_text"
					  android:gravity="center"
					  android:text="@string/retrieval_complete"
					  android:layout_height="wrap_content"/>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="45dp"
					android:layout_marginStart="10dp"
					android:layout_marginTop="15dp"
					android:layout_marginEnd="10dp"
					android:background="@drawable/buttonbg"
					android:id="@+id/submit_button_container"
					>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/submit"
						android:textColor="@color/colorPrimary"
						android:textAlignment="center"
						android:textSize="15sp"
						android:layout_centerInParent="true"
						android:textStyle="bold"
						android:id="@+id/submit_button_text"/>

				<ProgressBar
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:indeterminateTint="@color/colorAccent"
						android:layout_centerInParent="true"
						android:id="@+id/submit_button_progressBar"
						android:visibility="gone"/>

				<ImageView
						app:srcCompat="@drawable/ic_check_black_24dp"
						android:tint="@color/colorAccent"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:layout_centerInParent="true"
						android:id="@+id/submit_button_image"
						android:visibility="gone"/>


			</RelativeLayout>


			<TextView
					android:text="@string/go_back_sign_in"
					android:layout_width="match_parent"
					android:padding="5dp"
					android:background="?attr/selectableItemBackground"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginBottom="10dp"
					android:layout_gravity="center_horizontal"
					android:textColor="@color/colorAccent"
					android:textSize="17sp"
					android:textStyle="bold"
					android:id="@+id/back_sign_in"
					android:layout_marginTop="32dp"/>
	</LinearLayout>

</ScrollView>

