<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:layout_marginTop="40dp"
              android:textSize="27sp"
              android:id="@+id/new_auth_signup_act_label"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:textColor="@android:color/black"
              android:textStyle="bold"
              android:text="@string/create_an_account"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              android:textSize="17sp"
              app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_label"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/new_auth_signup_act_instro"
              android:textColor="@android:color/black"
              android:text="@string/let_s_get_you_started"
              android:layout_height="wrap_content"
    />

    <ScrollView android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_instro"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/new_auth_signup_act_name_layout"
                    app:hintAnimationEnabled="true"
                    android:hint="@string/name"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_instro"
                    app:passwordToggleTint="@color/colorPrimary"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/font_family"
                        android:backgroundTint="@android:color/black"
                        android:id="@+id/new_auth_signup_act_name"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/new_auth_signup_act_bio_layout"
                    app:hintAnimationEnabled="true"
                    android:hint="@string/short_bio_optional"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_name_layout"
                    android:layout_marginTop="10dp"
                    app:passwordToggleTint="@color/colorPrimary"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/font_family"
                        android:backgroundTint="@android:color/black"
                        android:id="@+id/new_auth_signup_act_bio"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/new_auth_signup_act_email_layout"
                    app:hintAnimationEnabled="true"
                    android:hint="@string/email_address"

                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_bio_layout"
                    android:layout_marginTop="10dp"
                    app:passwordToggleTint="@color/colorPrimary"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/font_family"
                        android:backgroundTint="@android:color/black"
                        android:textColorHint="@color/colorPrimary"
                        android:id="@+id/new_auth_signup_act_email"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true"
                    android:hint="@string/password"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_email_layout"
                    android:id="@+id/new_auth_signup_act_password_layout"
                    app:passwordToggleTint="@android:color/black"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/font_family"
                        android:inputType="textPassword"
                        android:backgroundTint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:id="@+id/new_auth_signup_act_password"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true"
                    android:hint="@string/confirm_password"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_password_layout"
                    android:id="@+id/new_auth_signup_act_conf_password_layout"
                    app:passwordToggleTint="@android:color/black"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/font_family"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@android:color/black"
                        android:id="@+id/new_auth_signup_act_conf_password"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout android:layout_width="match_parent"
                            app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_conf_password_layout"
                            android:layout_marginTop="30dp"
                            android:animateLayoutChanges="true"
                            android:id="@+id/new_auth_signup_act_signup_btn"
                            android:background="@drawable/buttonbg"
                            android:layout_height="40dp">

                <ProgressBar android:layout_width="20dp"
                             android:indeterminateTint="@color/colorAccent"
                             android:visibility="gone"
                             android:id="@+id/new_auth_signup_act_progress"
                             android:layout_centerInParent="true"
                             android:layout_height="20dp"/>

                <TextView android:layout_width="match_parent"
                          android:textColor="@color/colorPrimary"
                          android:text="@string/sign_up"
                          android:id="@+id/new_auth_signup_act_signup_text"
                          android:textStyle="bold"
                          android:layout_centerInParent="true"
                          android:gravity="center"
                          android:textSize="17sp"
                          android:layout_height="match_parent"/>

            </RelativeLayout>

            <TextView android:layout_width="match_parent"
                      app:layout_constraintTop_toBottomOf="@id/new_auth_signup_act_signup_btn"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="20dp"
                      android:textColor="@color/colorAccent"
                      android:textSize="17sp"
                      android:background="?attr/selectableItemBackground"
                      android:id="@+id/new_auth_signup_act_other_opt"
                      android:textStyle="bold"
                      android:gravity="center"
                      android:text="@string/already_a_part_of_us_sign_in"
                      android:layout_height="35dp"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>