<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        tools:context=".View.Fragments.HomeFragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingTop="20dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:layout_height="wrap_content">

                <ImageButton android:layout_width="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:layout_gravity="end"
                             android:id="@+id/profile_frag_menu_btn"
                             app:srcCompat="@drawable/ic_more"
                             android:layout_height="wrap_content"/>

                <LinearLayout android:layout_width="match_parent"
                              android:orientation="horizontal"
                              android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                            android:layout_width="70dp"
                            android:layout_gravity="center_vertical"
                            app:cardCornerRadius="35dp"
                            app:cardPreventCornerOverlap="true"
                            android:layout_height="70dp">

                        <ImageView android:layout_width="match_parent"
                                   android:id="@+id/profile_frag_userimage"
                                   app:srcCompat="@drawable/ic_male_placeholder"
                                   android:scaleType="center"
                                   android:layout_height="match_parent"/>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout android:layout_width="wrap_content"
                                  android:orientation="vertical"
                                  android:layout_marginStart="20dp"
                                  android:layout_gravity="center_vertical"
                                  android:layout_height="wrap_content">

                        <TextView android:layout_width="wrap_content"
                                  android:text="@string/_0"
                                  android:textSize="20sp"
                                  android:layout_gravity="center_horizontal"
                                  android:gravity="center"
                                  android:textStyle="bold"
                                  android:id="@+id/profile_frag_posted_events_num"
                                  android:textColor="@android:color/black"
                                  android:layout_height="wrap_content"/>

                        <TextView android:layout_width="wrap_content"
                                  android:layout_gravity="center_vertical"
                                  android:gravity="center"
                                  android:text="@string/posted_events"
                                  android:paddingStart="10dp"
                                  android:layout_marginTop="5dp"
                                  android:textSize="15sp"
                                  android:paddingEnd="10dp"
                                  android:layout_height="wrap_content"/>

                    </LinearLayout>



                    <LinearLayout android:layout_width="wrap_content"
                                  android:orientation="vertical"
                                  android:layout_gravity="center_vertical"
                                  android:layout_height="wrap_content">

                        <TextView android:layout_width="wrap_content"
                                  android:text="@string/_0"
                                  android:textSize="20sp"
                                  android:id="@+id/profile_frag_promoted_events_num"
                                  android:textStyle="bold"
                                  android:layout_gravity="center_horizontal"
                                  android:gravity="center"
                                  android:textColor="@android:color/black"
                                  android:layout_height="wrap_content"/>

                        <TextView android:layout_width="wrap_content"
                              android:layout_gravity="center_vertical"
                              android:gravity="center"
                              android:text="@string/promoted_events"
                              android:layout_marginTop="5dp"
                              android:paddingStart="10dp"
                              android:textSize="15sp"
                              android:paddingEnd="10dp"
                              android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>


                <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/profile_frag_username"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text=""
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/profile_frag_user_bio"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="5dp"
                        android:text=""
                        android:layout_height="wrap_content"/>


            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabGravity="fill"
                app:tabIndicatorHeight="2dp"
                android:id="@+id/profile_frag_tab_layout"
                app:tabTextColor="@android:color/black"
                android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/profile_frag_viewpager"
            android:layout_height="match_parent"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>